--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-dropdown": "^1.9.0",
     "react-hook-form": "^6.9.2",
     "react-loader-spinner": "^3.1.14",
+    "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
     "swiper": "^6.3.3"
   },
   "scripts": {
